Working on UserRoute

--- a/backend/controller/error.html
+++ b/backend/controller/error.html
@@ -48,12 +48,6 @@ svg {
 }
 
 
-.full-torradeira {
-   
-}
-.torradeira {
-}
-
 .pao-atras {
   animation: leftright 1s alternate infinite;
   transform-origin: center;
@@ -353,7 +347,7 @@ svg {
  * animation wobble-ver-right
  * ----------------------------------------
  */
-@-webkit-keyframes wobble-ver-right {
+@keyframes wobble-ver-right {
   0%,
   100% {
     -webkit-transform: translateY(0) rotate(0);
